[MSA-79] feat: Custom Exception 적용